<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/navigation_item_1"
            android:id="@+id/nav_item_1"/>
        <item
            android:title="@string/navigation_item_2"
            android:id="@+id/nav_item_2"/>
        <item
            android:title="@string/navigation_item_3"
            android:id="@+id/nav_item_3"/>
        <item
            android:title="@string/navigation_item_4"
            android:id="@+id/nav_item_4"/>
        <item
            android:title="@string/navigation_item_5"
            android:id="@+id/nav_item_5"/>
    </group>
    <!--<item android:title="subtitles">
        <menu>
            <item
                android:title="@string/navigation_sub_item_1"
                android:id="@+id/nav_sub_item_1"
                android:icon="@drawable/information_icon"/>
            <item
                android:title="@string/navigation_sub_item_2"
                android:id="@+id/nav_sub_item_2"
                android:icon="@drawable/draft_icon"/>
        </menu>
    </item>-->

</menu>